--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">Minhalogo</div>
+
+        <input type="checkbox"id="menu-toggle">
+        <label for="menu-toggle"class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+
+        ,<nav>
+            <a href="#">inicio</a>
+            <a href="#">erviços</a>
+            <a href="#">sobre</a>
+            <a href="#"> contato</a>
+        </nav>
+    </header>
     
 </body>
 </html>
