--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <span></span>
         </label>
 
-        ,<nav>
+        <nav>
             <a href="#">inicio</a>
-            <a href="#">erviços</a>
+            <a href="#">serviços</a>
             <a href="#">sobre</a>
             <a href="#"> contato</a>
         </nav>
@@ -29,5 +29,5 @@
 </html>
 
 <main>
-    <section class="</section>
+    <section class=</section>
 </main>
