--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Minhalogo</div>
+        <div class="logo"> palha italiana </div>
 
         <input type="checkbox"id="menu-toggle">
         <label for="menu-toggle"class="menu-icon">
@@ -19,11 +19,8 @@
 
         <nav>
             <a href="#">inicio</a>
-
             <a href="#">serviços</a>
-
             <a href="#">sobre</a>
-            
             <a href="#"> contato</a>
         </nav>
     </header>
