--- a/index.html
+++ b/index.html
@@ -31,3 +31,10 @@
 <main>
     <section class=</section>
 </main>
+<h1>Sabores de palha italiana</h1>
+    <p>os mais pedidos</p>
+    <button onclick="alternarModo()">🌙 Alternar Modo Noturno</button>
+  </header>
+
+  <main>
+     <section id="introdução">
