--- a/index.html
+++ b/index.html
@@ -38,3 +38,69 @@
 
   <main>
      <section id="introdução">
+        <h2>Curiosidade sobre a palha italiana</h2>
+      <p>
+      Como as pessoas fala da palha..
+       "nossa e taõ caro para um brigadeiro com bolacha!"
+       As pessoas fala assim, mais não pensao no trabalho e no tempo das confeiteiras, mais no final elas compra e ama.
+      a palha italiana e um brigadeiro mais parimorado,isso quer diser mais gostoso!
+ o mais engraçado e que as pessoas penção que é ruim, mai pelo contrario e muito bom, e quando elas exprementam pedem mais e mais.
+      </p>
+        <p>
+        
+      </p>
+    </section>
+
+     <section1 id="curiosidades">
+      <h2>sabores da palha italiana</h2>
+      <ul>
+        <li> A palha italiana tem varios sabores ou so um?</li>
+        <li>Ela tem varios sabores ,mais o mais vendido e o de brigadeiro (o tradicional)</li>
+        <li>Muitas  confeiteiras criam suas propria palha, mais sempre lembrando a tradicional.</li>
+      </ul>
+    </section>
+
+    <section2 id="receita">
+      <h2>Receita Destaque: palha italiana(tradicional)</h2>
+      <p>facil e rapido </p>
+      <ul>
+        <li>2 pacote de bolacha de leite </li>
+        <li>2 leite condesado</li>
+        <li>1 creme de leite </li>
+        <li>1 colher de sopa de manteiga</li>
+        <li>1 xícara de chocolate 50% cacal</li>
+      </ul>
+      <p><strong>Modo de preparo:</strong> quebra as bolacha em pedaços, conserve em um pote,
+    abra os leite condesado, adicione o chocolate e mecha,e acrecente o creme de leite. vai ao fogo ( assistir o video dika da naka)</p>
+    </section>
+
+   
+   
+          <section id="galeria">
+      <h2> Vislumbre dos sabores </h2>
+      <p>NOSSO LAR!</p>
+      <div class="iniciativa">
+        <img src="img/images.jpeg" alt="A vida na roça tem valores que a gente só descobre quando perde.Hoje, na cidade grande, quando me bate a saudade do campo, eu me ponho a perguntar: pra quem tem espírito sertanejo, assim como eu e você, quanta diferença a gente encontra aqui nesse lugar... ">
+    </div>
+    </section>
+    <section id="galeria">
+      <h2>Galeria dos Sabores</h2>
+      <p>Veja como a cidade recria os sabores da roça!</p>
+      <div class="fotos">
+        <img src="img/shutterstock-1760209226-1-.jpg" alt="Bolo de milho">
+        <img src="img/Quanto-tempo-para-cozinhar-pamonha-1-1200x900.jpg" alt="Pamonha caseira">
+        <img src="img/chapa_reducao_fogao_a_lenha_libaneza_4_furos_pesada_1331_3_b24a20ee272b332705c9b7ee34d0020c.webp" alt="Fogão a lenha">
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Sabores do Campo - Produzido por Ketlyn apaixonada pela Roça</p>
+  </footer>
+
+  <script>
+    function alternarModo() {
+      document.body.classList.toggle('modo-noturno');
+    }
+  </script>
+</body>
