--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
         <li>1 xícara de chocolate 50% cacal</li>
       </ul>
       <p><strong>Modo de preparo:</strong> quebra as bolacha em pedaços, conserve em um pote,
-    abra os leite condesado, adicione o chocolate e mecha,e acrecente o creme de leite. vai ao fogo ( assistir o video dika da naka)</p>
-    </section>
+    abra os leite condesado, adicione 1 colher de farinha, adicione o chocolate 50%  mecha,e acrecente o creme de leite. vai ao fogo ( assistir o video dika da naka)</p>
+      </section3 id="montagem">
+      <h2> palha italiana recheada</h2>
+      <li> depois de pronto,agrecente a bolacha no rechio,mecha,coloque em uma forma com manteiga e um plastico.</li>
+      <li> coloque na geladeira para esfriar.</li>
