--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@
         <li>1 colher de sopa de manteiga</li>
         <li>1 xícara de chocolate 50% cacal</li>
       </ul>
-      <p><strong>Modo de preparo:</strong> quebra as bolacha em pedaços, conserve em um pote,
-    abra os leite condesado, adicione 1 colher de farinha, adicione o chocolate 50%  mecha,e acrecente o creme de leite. vai ao fogo ( assistir o video dika da naka)</p>
+      <p><strong>Modo de preparo:</strong> quebra as bolacha em pedaços,conserve em um pote, leite condesado ,creme de leite, chocolate 50%,1 colher de manteiga,
+      vai ao fogo,ponto de brigadeiro de enrrolar</p>
       </section3 id="montagem">
       <h2> palha italiana recheada</h2>
       <li> depois de pronto,agrecente a bolacha no rechio,mecha,coloque em uma forma com manteiga e um plastico.</li>
       <li> coloque na geladeira para esfriar.</li>
+      <li> faça o recheio para o meio , da sua preferencia, e coloque em cima da parte que foi a geladeira.</li>
+      <li> faça mais uma palha e coloque em cima da outa parte, leve a geladeira para esfriar.</li>
+      <li> depois de fria recorte do tamanho 6x6, e balha no chocolate derretido. </li>
+      <li> coloque dentro do saquinho, feche com uma laço da sua preferencia, coloque sua logo,pronto para a venda </li>
