--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <li>1 colher de sopa de manteiga</li>
         <li>1 xícara de chocolate 50% cacal</li>
       </ul>
+      <img src="img/doces1.jpg" alt="" title="" class="img_receita">
       <p><strong>Modo de preparo:</strong> quebra as bolacha em pedaços,conserve em um pote, leite condesado ,creme de leite, chocolate 50%,1 colher de manteiga,
       vai ao fogo,ponto de brigadeiro de enrrolar</p>
       </section3 id="montagem">
